--- a/index.html
+++ b/index.html
@@ -177,42 +177,77 @@
                                 </div>
                             </div>
                         </div>
-                            <div id="page3" class="swiper-slide">
-                                <video autoplay muted loop src="./Assets/videos/TK.mp4"
-                                    class="brightness-50 h-full w-full object-cover"></video>
-                                <div
-                                    class="absolute flex justify-center items-center top-0 left-0 z-10 h-full w-full flex-col">
-                                    <h4 data-translate="homeSubtitle"
-                                        class="text-center text-2xl font-[font4] text-zinc-300 max-md:text-lg max-sm:text-sm">
-                                        Acting
-                                        with integrity, a driver of trust</h4>
-                                    <h1 class="text-center text-8xl font-[font4] leading-none font-semibold max-md:text-6xl max-sm:text-5xl"
-                                        data-translate="homeTitle">
-                                        Your Dream Car<br>
-                                        Awaits You</h1>
-                                    <p data-translate="homeText"
-                                        class="text-center w-1/2 font-[font3] text-zinc-300 my-6 max-md:text-lg max-md:w-3/5 max-sm:text-sm">
-                                        At INT'l Motor, we provide tailored vehicle acquisition solutions for personal
-                                        or
-                                        professional
-                                        needs. From cars to machinery, our expert team ensures top-quality service with
-                                        integrity and
-                                        excellence.</p>
-                                    <div class="flex items-center gap-5 max-sm:flex-col max-sm:gap-1"><button
-                                            data-translate="buttonText"
-                                            class="py-2 px-4 border-2 rounded-lg max-sm:text-sm max-sm:px-3">Discover
-                                            our
-                                            brokerage
-                                            solutions</button>
-                                        <button data-translate="buttonText2"
-                                            class="py-2 px-4 border-2 rounded-lg max-sm:text-sm max-sm:px-3">Find
-                                            vehical of
-                                            your
-                                            dreams</button>
-                                    </div>
+                        <div id="page3" class="swiper-slide">
+                            <video autoplay muted loop src="./Assets/videos/TK.mp4"
+                                class="brightness-50 h-full w-full object-cover"></video>
+                            <div
+                                class="absolute flex justify-center items-center top-0 left-0 z-10 h-full w-full flex-col">
+                                <h4 data-translate="homeSubtitle"
+                                    class="text-center text-2xl font-[font4] text-zinc-300 max-md:text-lg max-sm:text-sm">
+                                    Acting
+                                    with integrity, a driver of trust</h4>
+                                <h1 class="text-center text-8xl font-[font4] leading-none font-semibold max-md:text-6xl max-sm:text-5xl"
+                                    data-translate="homeTitle">
+                                    Your Dream Car<br>
+                                    Awaits You</h1>
+                                <p data-translate="homeText"
+                                    class="text-center w-1/2 font-[font3] text-zinc-300 my-6 max-md:text-lg max-md:w-3/5 max-sm:text-sm">
+                                    At INT'l Motor, we provide tailored vehicle acquisition solutions for personal
+                                    or
+                                    professional
+                                    needs. From cars to machinery, our expert team ensures top-quality service with
+                                    integrity and
+                                    excellence.</p>
+                                <div class="flex items-center gap-5 max-sm:flex-col max-sm:gap-1"><button
+                                        data-translate="buttonText"
+                                        class="py-2 px-4 border-2 rounded-lg max-sm:text-sm max-sm:px-3">Discover
+                                        our
+                                        brokerage
+                                        solutions</button>
+                                    <button data-translate="buttonText2"
+                                        class="py-2 px-4 border-2 rounded-lg max-sm:text-sm max-sm:px-3">Find
+                                        vehical of
+                                        your
+                                        dreams</button>
                                 </div>
                             </div>
                         </div>
+                        <div id="page4" class="swiper-slide">
+                            <video autoplay muted loop src="./Assets/videos/Supra-vid.mp4"
+                                class="brightness-50 h-full w-full object-cover"></video>
+                            <div
+                                class="absolute flex justify-center items-center top-0 left-0 z-10 h-full w-full flex-col">
+                                <h4 data-translate="homeSubtitle"
+                                    class="text-center text-2xl font-[font4] text-zinc-300 max-md:text-lg max-sm:text-sm">
+                                    Acting
+                                    with integrity, a driver of trust</h4>
+                                <h1 class="text-center text-8xl font-[font4] leading-none font-semibold max-md:text-6xl max-sm:text-5xl"
+                                    data-translate="homeTitle">
+                                    Your Dream Car<br>
+                                    Awaits You</h1>
+                                <p data-translate="homeText"
+                                    class="text-center w-1/2 font-[font3] text-zinc-300 my-6 max-md:text-lg max-md:w-3/5 max-sm:text-sm">
+                                    At INT'l Motor, we provide tailored vehicle acquisition solutions for personal
+                                    or
+                                    professional
+                                    needs. From cars to machinery, our expert team ensures top-quality service with
+                                    integrity and
+                                    excellence.</p>
+                                <div class="flex items-center gap-5 max-sm:flex-col max-sm:gap-1"><button
+                                        data-translate="buttonText"
+                                        class="py-2 px-4 border-2 rounded-lg max-sm:text-sm max-sm:px-3">Discover
+                                        our
+                                        brokerage
+                                        solutions</button>
+                                    <button data-translate="buttonText2"
+                                        class="py-2 px-4 border-2 rounded-lg max-sm:text-sm max-sm:px-3">Find
+                                        vehical of
+                                        your
+                                        dreams</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
             </section>
             <section class="about-us mt-20">
                 <div class="max-w-7xl mx-auto p-6">
