--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                             </div>
                         </div>
                             <div id="page3" class="swiper-slide">
-                                <video autoplay muted loop src="./Assets/videos/TK.mp4"
+                                <video autoplay muted loop src="./Assets/videos/Supra-vid.mp4"
                                     class="brightness-50 h-full w-full object-cover"></video>
                                 <div
                                     class="absolute flex justify-center items-center top-0 left-0 z-10 h-full w-full flex-col">
