--- a/index.html
+++ b/index.html
@@ -8,6 +8,31 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/Assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/Assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="/Assets/favicon/site.webmanifest">
+    <!-- Basic Meta Tags -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="INT'l Motor Co.">
+    <meta name="description" content="INT'l Motor offers customized vehicle acquisition solutions for personal and professional needs. From cars to machinery, our expert team ensures excellence and integrity in all services. Discover a seamless dealership experience with top-notch support, eco-responsibility, and exclusive offers tailored to your needs.">
+    <meta name="keywords" content="vehicle acquisition, car dealership, car maintenance, international brokerage, vehicle solutions, business automation, car services, tailored solutions, eco-responsibility, social justice, customer satisfaction, used cars, new cars, construction machinery, agricultural machinery, utility vehicles, motorcycles, special vehicles, customer support, exclusive deals, brokerage solutions, seamless experience, vehicle maintenance, professional integrity.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="INT'l Motor | Vehicle Acquisition Solutions">
+    <meta property="og:description" content="Explore customized solutions for personal and professional vehicle needs. INT'l Motor ensures excellence, eco-responsibility, and a seamless experience.">
+    <meta property="og:image" content="https://example.com/your-image.jpg"> <!-- Replace with actual image URL -->
+    <meta property="og:url" content="https://yourwebsite.com">
+    <meta property="og:site_name" content="INT'l Motor">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="INT'l Motor | Vehicle Acquisition Solutions">
+    <meta name="twitter:description" content="Explore customized solutions for personal and professional vehicle needs. INT'l Motor ensures excellence, eco-responsibility, and a seamless experience.">
+    <meta name="twitter:image" content="https://example.com/your-image.jpg"> <!-- Replace with actual image URL -->
+
+    <!-- Language Meta Tags -->
+    <meta name="language" content="EN, FR">
+    <meta name="content-language" content="EN, FR">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.css"
         integrity="sha512-kJlvECunwXftkPwyvHbclArO8wszgBGisiLeuDFwNM8ws+wKIw0sv1os3ClWZOcrEB2eRXULYUsm8OVRGJKwGA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
