--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <header
             class="backdrop-blur-sm fixed top-0 left-0 w-full flex items-center justify-between py-4 px-8 z-10 max-sm:px-6">
             <div id="logo" class="h-9 max-md:h-6 max-sm:h-[1.6rem] hover:scale-125 duration-75 ease-in-out">
-                <img src="./Assets/photos/3.Logo_Horizontale_Blanc_sanstagline.png" alt="" class="h-full object-cover">
+                <img src="./Assets/photos/3.Logo_Horizontale_Blanc_sanstagline.png" alt="INT'l MOTOR logo" class="h-full object-cover">
             </div>
             <nav class="flex items-center space-x-8 group max-md:hidden">
                 <div class="relative">
@@ -454,7 +454,7 @@
                             </div>
                             <div
                                 class="flex flex-col items-center justify-center p-8 bg-black text-white font-[font3] rounded-b-lg">
-                                <img src="./Assets//photos/Person1.jpg" alt=""
+                                <img src="./Assets//photos/Person1.jpg" alt="Random person1"
                                     class="w-16 h-16 mb-2 -mt-16 object-cover object-center rounded-full">
                                 <p class="text-xl font-semibold leading-tight">Person1</p>
                                 <p class="text-sm uppercase">Consumer</p>
@@ -480,7 +480,7 @@
                             </div>
                             <div
                                 class="flex flex-col items-center justify-center p-8 bg-black text-white font-[font3] rounded-b-lg">
-                                <img src="./Assets/photos/person2.jpg" alt=""
+                                <img src="./Assets/photos/person2.jpg" alt="Random person2"
                                     class="w-16 h-16 mb-2 -mt-16 object-cover object-center rounded-full">
                                 <p class="text-xl font-semibold leading-tight">Person2</p>
                                 <p class="text-sm uppercase">Consumer</p>
@@ -506,7 +506,7 @@
                             </div>
                             <div
                                 class="flex flex-col items-center justify-center p-8 bg-black text-white font-[font3] rounded-b-lg">
-                                <img src="./Assets//photos/Person3.jpg" alt=""
+                                <img src="./Assets//photos/Person3.jpg" alt="Random person3"
                                     class="w-16 h-16 mb-2 -mt-16 object-cover object-center rounded-full">
                                 <p class="text-xl font-semibold leading-tight">Person3</p>
                                 <p class="text-sm uppercase">Consumer</p>
@@ -532,7 +532,7 @@
                             </div>
                             <div
                                 class="flex flex-col items-center justify-center p-8 bg-black text-white font-[font3] rounded-b-lg">
-                                <img src="./Assets/photos/person4.jpg" alt=""
+                                <img src="./Assets/photos/person4.jpg" alt="Random person4"
                                     class="w-16 h-16 mb-2 -mt-16 object-cover object-center rounded-full">
                                 <p class="text-xl font-semibold leading-tight">Person4</p>
                                 <p class="text-sm uppercase">Consumer</p>
