--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </nav>
             <div class="flex justify-center items-center gap-4">
                 <div id="searchContainer" class="flex items-start justify-center gap-2">
-                    <button id="searchButton"><i class="ri-search-2-line text-2xl"></i></button>
+                    <button id="searchButton" aria-label="SearchButton" ><i class="ri-search-2-line text-2xl"></i></button>
                 </div>
                 <div class="language-opts flex items-center gap-3">
                     <div class="language">
@@ -162,7 +162,7 @@
                                         class="py-2 px-4 border-2 rounded-lg max-sm:text-sm max-sm:px-3">Discover our
                                         brokerage
                                         solutions</button>
-                                    <button data-translate="buttonText2"
+                                    <button data-translate="buttonText2" aria-label="translation"
                                         class="py-2 px-4 border-2 rounded-lg max-sm:text-sm max-sm:px-3">Find vehical of
                                         your
                                         dreams</button>
@@ -194,7 +194,7 @@
                                         class="py-2 px-4 border-2 rounded-lg max-sm:text-sm max-sm:px-3">Discover our
                                         brokerage
                                         solutions</button>
-                                    <button data-translate="buttonText2"
+                                    <button data-translate="buttonText2" aria-label="translation"
                                         class="py-2 px-4 border-2 rounded-lg max-sm:text-sm max-sm:px-3">Find vehical of
                                         your
                                         dreams</button>
@@ -228,7 +228,7 @@
                                             our
                                             brokerage
                                             solutions</button>
-                                        <button data-translate="buttonText2"
+                                        <button data-translate="buttonText2" aria-label="translation"
                                             class="py-2 px-4 border-2 rounded-lg max-sm:text-sm max-sm:px-3">Find
                                             vehical of
                                             your
@@ -293,7 +293,7 @@
                                         Int'l Motor is an international brokerage company that provides unique vehicle
                                         acquisition solutions for personal or professional use.
                                     </p>
-                                    <button class="text-purple-700 font-semibold" data-translate="readMore">
+                                    <button class="text-purple-700 font-semibold" aria-label="readmore" data-translate="readMore">
                                         Read More
                                         <i class="fas fa-arrow-right text-white"></i>
                                     </button>
@@ -308,7 +308,7 @@
                                         solutions and exclusive client projects, driven by a commitment to Integrity and
                                         Excellence.
                                     </p>
-                                    <button class="text-purple-700 font-semibold" data-translate="readMore">
+                                    <button class="text-purple-700 font-semibold" aria-label="readmore" data-translate="readMore">
                                         Read More
                                         <i class="fas fa-arrow-right text-white"></i>
                                     </button>
@@ -326,7 +326,7 @@
                                     vehicles, or services for private individuals, Int'l Motor is dedicated to meeting
                                     your specific needs.
                                 </p>
-                                <button class="text-purple-700 font-semibold" data-translate="readMore">
+                                <button class="text-purple-700 font-semibold" aria-label="readmore" data-translate="readMore">
                                     Read More
                                     <i class="fas fa-arrow-right text-white"></i>
                                 </button>
