--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div id="main" class="h-full w-full text-white">
         <header
             class="backdrop-blur-sm fixed top-0 left-0 w-full flex items-center justify-between py-4 px-8 z-10 max-sm:px-6">
-            <div id="logo" class="h-9 max-md:h-6 max-sm:h-[1.6rem] hover:scale-125 duration-75 ease-in-out">
+            <div id="logo" class="h-9 max-md:h-6 max-sm:h-[1.6rem] hover:scale-125 duration-75 ease-in-out max-md:hover:scale-100">
                 <img src="./Assets/photos/3.Logo_Horizontale_Blanc_sanstagline.png" alt="INT'l MOTOR logo" class="h-full object-cover">
             </div>
             <nav class="flex items-center space-x-8 group max-md:hidden">
