--- a/index.html
+++ b/index.html
@@ -239,7 +239,8 @@
                             </div>
                         </div>
             </section>
-            <section class="about-us mt-20">
+            <section class="about-us mt-20 ">
+                <div class="absolute top-[150vh] left-[30vw] rounded-full w-[45vw] h-[37vw]  bg-gradient-to-tr from-[#381152] to-[#935bb8] z-[-1] blur-[70px] animate-blob" id="blub"></div>
                 <div class="max-w-7xl mx-auto p-6">
                     <div class="text-center mb-8">
                         <p class="text-gray-400 font-[font3] font-semibold text-2xl" data-translate="whatWeEngaged">
