--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div id="main" class="h-full w-full text-white">
         <header
             class="backdrop-blur-sm fixed top-0 left-0 w-full flex items-center justify-between py-4 px-8 z-10 max-sm:px-6">
-            <div id="logo" class="h-9 max-md:h-6 max-sm:h-[1.6rem] hover:scale-125 duration-75 ease-in-out max-md:hover:scale-100">
+            <div id="logo" class="h-9 max-md:h-6 max-sm:h-[1.6rem] scale-100 hover:scale-125 duration-75 ease-in-out max-md:hover:scale-100">
                 <img src="./Assets/photos/3.Logo_Horizontale_Blanc_sanstagline.png" alt="INT'l MOTOR logo" class="h-full object-cover">
             </div>
             <nav class="flex items-center space-x-8 group max-md:hidden">
@@ -285,6 +285,7 @@
                                 width="600" />
                         </div>
                         <div class="lg:w-1/2 space-y-6">
+                                          <div class="absolute top-[150vh] left-[30vw] rounded-full w-[45vw] h-[37vw]  bg-gradient-to-tr from-[#381152] to-[#935bb8] z-[-1] blur-[70px] animate-blob" id="blub"></div>
                             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                                 <div
                                     class="p-6 bg-custom-purple shadow-custom backdrop-blur-custom border-custom-white border rounded-custom">
