--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
 </head>
 
 <body>
+    <div id="loader" class="h-full w-full bg-gradient-to-r from-[#0C0712] to-black fixed top-0 left-0 z-40 flex items-center justify-center flex-col">
+        <img src="./Assets/photos/Symbole_blanc.png" alt="loader" class="h-24 opacity-0">
+        <div class="counter text-white absolute bottom-5 right-5">
+            <span class="number text-6xl font-[font4] font-semibold">0</span>
+            <span class="text-6xl font-[font4] font-semibold">%</span>
+        </div>
+    </div>
     <div id="main" class="h-full w-full text-white">
         <header
             class="backdrop-blur-sm fixed top-0 left-0 w-full flex items-center justify-between py-4 px-8 z-10 max-sm:px-6">
