--- a/index.html
+++ b/index.html
@@ -110,8 +110,6 @@
             </div>
         </header>
         <!-- Header -->
-
-
         <div id="full" class="max-md:w-5/6 z-20 fixed h-full top-0 right-0 w-3/12 bg-[#17151a] translate-x-full">
             <i class="ri-close-line magnet-target text-3xl absolute top-5 right-5 cursor-pointer mb-5"></i>
             <div class="max-w-md mx-auto bg-purple p-4 rounded shadow mt-8">
@@ -452,7 +450,7 @@
                                 <input id="search-bar" placeholder="Input your query..." name="q"
                                     class="px-6 py-2 w-full rounded-md flex-1 outline-none bg-white text-purple-700" required="">
                                 <button type="submit"
-                                    class="w-full md:w-auto px-6 py-3 bg-black border-black text-white fill-white active:scale-95 duration-100 border will-change-transform overflow-hidden relative rounded-xl transition-all hover:bg-purple-500">
+                                    class="w-full md:w-auto px-6 py-3 bg-black border-black text-white fill-white active:scale-95 duration-100 border will-change-transform overflow-hidden relative rounded-xl transition-all hover:bg-purple-700">
                                     <div class="flex items-center transition-all opacity-1 ">
                                         <span class="text-sm font-semibold whitespace-nowrap truncate mx-auto">
                                             Search
@@ -683,9 +681,7 @@
                 reserved.</div>
         </footer>
     </div>
-
-
-
+    <script src="https://unpkg.com/lenis@1.1.18/dist/lenis.min.js"></script> 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js" defer></script>
     <script src="script.js" defer></script>
