--- a/index.html
+++ b/index.html
@@ -726,17 +726,17 @@
                     </div>
                 </div>
             </section>
-            <section class="py-6 dark:bg-gray-100 dark:text-gray-900">
+            <section class="pb-32">
                 <div class="grid max-w-6xl grid-cols-1 px-6 mx-auto lg:px-8 md:grid-cols-2 md:divide-x">
                     <div class="py-6 md:py-0 md:px-6">
-                        <h1 class="text-4xl font-bold">Get in touch</h1>
-                        <p class="pt-2 pb-4">Fill in the form to start a conversation</p>
-                        <div class="space-y-4">
+                        <h1 class="text-4xl font-semibold font-[font1]">Get in touch</h1>
+                        <p class="pt-2 pb-4 font-[font3]">Fill in the form to start a conversation</p>
+                        <div class="space-y-3 font-[font3]">
                             <p class="flex items-center">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5 mr-2 sm:mr-6">
                                     <path fill-rule="evenodd" d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z" clip-rule="evenodd"></path>
                                 </svg>
-                                <span>Fake address, 9999 City</span>
+                                <span>your Address</span>
                             </p>
                             <p class="flex items-center">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5 mr-2 sm:mr-6">
@@ -753,18 +753,18 @@
                             </p>
                         </div>
                     </div>
-                    <form novalidate="" class="flex flex-col py-6 space-y-6 md:py-0 md:px-6">
+                    <form novalidate="" class="font-[font3] flex flex-col py-6 space-y-6 md:py-0 md:px-6 text-black">
                         <label class="block">
-                            <span class="mb-1">Full name</span>
-                            <input type="text" placeholder="Leroy Jenkins" class="block w-full rounded-md shadow-sm focus:ring focus:ring-opacity-75 focus:dark:ring-violet-600 dark:bg-gray-100">
+                            <span class="mb-1 text-white">Full name</span>
+                            <input type="text" placeholder="Leroy Jenkins" class="block w-full rounded-md shadow-sm focus:ring focus:ring-opacity-75 focus:dark:ring-violet-600 px-2 py-2">
                         </label>
                         <label class="block">
-                            <span class="mb-1">Email address</span>
-                            <input type="email" placeholder="leroy@jenkins.com" class="block w-full rounded-md shadow-sm focus:ring focus:ring-opacity-75 focus:dark:ring-violet-600 dark:bg-gray-100">
+                            <span class="mb-1 text-white">Email address</span>
+                            <input type="email" placeholder="leroy@jenkins.com" class="block w-full rounded-md shadow-sm focus:ring focus:ring-opacity-75 focus:dark:ring-violet-600 px-2 py-2">
                         </label>
                         <label class="block">
-                            <span class="mb-1">Message</span>
-                            <textarea rows="3" class="block w-full rounded-md focus:ring focus:ring-opacity-75 focus:dark:ring-violet-600 dark:bg-gray-100"></textarea>
+                            <span class="mb-1 text-white">Message</span>
+                            <textarea rows="3" class="block w-full rounded-md focus:ring focus:ring-opacity-75 focus:dark:ring-violet-600 dark:bg-gray-100 px-2 py-2"></textarea>
                         </label>
                         <button type="button" class="self-center px-8 py-3 text-lg rounded focus:ring hover:ring focus:ring-opacity-75 dark:bg-violet-600 dark:text-gray-50 focus:dark:ring-violet-600 hover:dark:ring-violet-600">Submit</button>
                     </form>
