--- a/index.html
+++ b/index.html
@@ -171,11 +171,11 @@
                                     integrity and
                                     excellence.</p>
                                 <div class="flex items-center gap-5 max-sm:flex-col max-sm:gap-1"><button
-                                        data-translate="buttonText"
+                                        data-translate="buttonText" href="#Services"
                                         class="py-2 px-4 border-2 rounded-lg max-sm:text-sm max-sm:px-3">Discover our
                                         brokerage
                                         solutions</button>
-                                    <button data-translate="buttonText2"
+                                    <button data-translate="buttonText2" href="#searchvehicles"
                                         class="py-2 px-4 border-2 rounded-lg max-sm:text-sm max-sm:px-3">Find vehical of
                                         your
                                         dreams</button>
@@ -203,11 +203,11 @@
                                     integrity and
                                     excellence.</p>
                                 <div class="flex items-center gap-5 max-sm:flex-col max-sm:gap-1"><button
-                                        data-translate="buttonText"
+                                        data-translate="buttonText" href="#Services"
                                         class="py-2 px-4 border-2 rounded-lg max-sm:text-sm max-sm:px-3">Discover our
                                         brokerage
                                         solutions</button>
-                                    <button data-translate="buttonText2"
+                                    <button data-translate="buttonText2" href="#searchvehicles"
                                         class="py-2 px-4 border-2 rounded-lg max-sm:text-sm max-sm:px-3">Find vehical of
                                         your
                                         dreams</button>
@@ -236,12 +236,12 @@
                                     integrity and
                                     excellence.</p>
                                 <div class="flex items-center gap-5 max-sm:flex-col max-sm:gap-1"><button
-                                        data-translate="buttonText"
+                                        data-translate="buttonText" href="#Services"
                                         class="py-2 px-4 border-2 rounded-lg max-sm:text-sm max-sm:px-3">Discover
                                         our
                                         brokerage
                                         solutions</button>
-                                    <button data-translate="buttonText2"
+                                    <button data-translate="buttonText2" href="#searchvehicles"
                                         class="py-2 px-4 border-2 rounded-lg max-sm:text-sm max-sm:px-3">Find
                                         vehical of
                                         your
@@ -352,7 +352,7 @@
                     </div>
                 </div>
             </section>
-            <section>
+            <section id="Services">
                 <div class="py-8 px-4 max-w-screen sm:py-16 lg:px-6 flex items-center justify-center flex-col">
                     <div
                         class="max-w-screen-md mb-8 lg:mb-16 text-center flex items-center justify-center flex-col px-5">
@@ -442,7 +442,7 @@
                     </div>
                 </div>
             </section>
-            <section class="search-functionality">
+            <section class="search-functionality" id="searchvehicles">
                 <div class="mx-auto max-w-7xl sm:px-6 lg:px-8">
                     <div
                       class="relative isolate overflow-hidden bg-transparent px-6 py-20 text-center sm:px-16 sm:shadow-sm"
@@ -521,7 +521,7 @@
                       Show More
                     </button>
             </section>
-            <section>
+            <section class="Testimonials">
                 <div class="min-w-screen min-h-screen flex items-center justify-center py-5">
                     <div class="w-full px-5 py-16 md:py-24 text-gray-300">
                         <div class="w-full max-w-6xl mx-auto">
