--- a/index.html
+++ b/index.html
@@ -758,15 +758,15 @@
                   <form action="mailto:intlmotor.dircom@outlook.com " method="post" enctype="text/plain" class="font-[font3] flex flex-col py-6 space-y-6 md:py-0 md:px-6 text-black">
                     <label class="block">
                       <span class="mb-1 text-white">Full name</span>
-                      <input type="text" name="FullName" placeholder="Leroy Jenkins" class="block w-full rounded-md shadow-sm focus:ring focus:ring-opacity-75 focus:dark:ring-violet-600 px-2 py-2">
+                      <input type="text" name="FullName" placeholder="Leroy Jenkins" class="block w-full rounded-md shadow-sm focus:ring focus:ring-opacity-75 focus:dark:ring-violet-600 px-2 py-2" required>
                     </label>
                     <label class="block">
                       <span class="mb-1 text-white">Email address</span>
-                      <input type="email" name="Email" placeholder="leroy@jenkins.com" class="block w-full rounded-md shadow-sm focus:ring focus:ring-opacity-75 focus:dark:ring-violet-600 px-2 py-2">
+                      <input type="email" name="Email" placeholder="leroy@jenkins.com" class="block w-full rounded-md shadow-sm focus:ring focus:ring-opacity-75 focus:dark:ring-violet-600 px-2 py-2" required>
                     </label>
                     <label class="block">
                       <span class="mb-1 text-white">Message</span>
-                      <textarea rows="3" name="Message" class="block w-full rounded-md focus:ring focus:ring-opacity-75 focus:dark:ring-violet-600 dark:bg-gray-100 px-2 py-2"></textarea>
+                      <textarea rows="3" name="Message" class="block w-full rounded-md focus:ring focus:ring-opacity-75 focus:dark:ring-violet-600 dark:bg-gray-100 px-2 py-2" required></textarea>
                     </label>
                     <button type="submit" class="self-center px-8 py-3 text-lg rounded focus:ring hover:ring focus:ring-opacity-75 dark:bg-violet-600 dark:text-gray-50 focus:dark:ring-violet-600 hover:dark:ring-violet-600">Submit</button>
                   </form>
