--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </div>
         </header>
         <!-- Header -->
-        <div id="full" class="z-20 fixed top-0 right-0 h-full w-3/12 max-md:w-5/6 bg-[#17151a] translate-x-full shadow-lg">
+        <div id="full" class="z-20 fixed top-0 right-0 h-full w-3/12 max-md:w-3/4 bg-[#17151a] translate-x-full shadow-lg">
             <i class="ri-close-line text-3xl absolute top-5 right-5 cursor-pointer text-gray-400 hover:text-white"></i>
             <div class="max-w-md mx-auto p-6 rounded shadow mt-8">
                 <!-- Dropdown 1 -->
@@ -304,7 +304,7 @@
                         <div class="lg:w-1/2 mb-8 lg:mb-0">
                             <img alt="Two people discussing a project in an office setting" class="rounded-lg w-full"
                                 height="400"
-                                src="https://storage.googleapis.com/a1aa/image/5GYbAq9jf7wCciYgc9rnnFf6eYs6DmyebpjtOcO0b8AfqFrfE.jpg"
+                                src="./Assets/photos/about.jpg"
                                 width="600" />
                         </div>
                         <div class="lg:w-1/2 space-y-6">
@@ -455,12 +455,12 @@
                 </div>
             </section>
             <section class="search-functionality" id="searchvehicles">
-                <div class="mx-auto max-w-7xl sm:px-6 lg:px-8">
+                <div class="mx-auto max-w-7xl sm:px-6 lg:px-8 font-[font3]">
                     <div
                         class="relative isolate overflow-hidden bg-transparent px-6 py-20 text-center sm:px-16 sm:shadow-sm">
-                        <p class="mx-auto max-w-2xl text-3xl font-bold tracking-tight text-whitesmoke-900 sm:text-4xl">
+                        <h1 class="mx-auto max-w-2xl text-3xl font-bold tracking-tight text-whitesmoke-900 sm:text-4xl">
                             Find what drives you..?
-                        </p>
+                        </h1>
 
                         <!-- Search Form -->
                         <form id="search-form" class="mt-8">
@@ -761,23 +761,23 @@
                         <label class="block">
                             <span class="mb-1 text-white">Full name</span>
                             <input type="text" name="FullName" placeholder="Leroy Jenkins"
-                                class="block w-full rounded-md shadow-sm focus:ring focus:ring-opacity-75 focus:dark:ring-violet-600 px-2 py-2"
+                                class="block w-full rounded-md shadow-sm focus:ring focus:ring-opacity-75 focus:dark:ring-purple-600 px-2 py-2"
                                 required>
                         </label>
                         <label class="block">
                             <span class="mb-1 text-white">Email address</span>
                             <input type="email" name="Email" placeholder="leroy@jenkins.com"
-                                class="block w-full rounded-md shadow-sm focus:ring focus:ring-opacity-75 focus:dark:ring-violet-600 px-2 py-2"
+                                class="block w-full rounded-md shadow-sm focus:ring focus:ring-opacity-75 focus:dark:ring-purple-600 px-2 py-2"
                                 required>
                         </label>
                         <label class="block">
                             <span class="mb-1 text-white">Message</span>
                             <textarea rows="3" name="Message"
-                                class="block w-full rounded-md focus:ring focus:ring-opacity-75 focus:dark:ring-violet-600 dark:bg-gray-100 px-2 py-2"
+                                class="block w-full rounded-md focus:ring focus:ring-opacity-75 focus:dark:ring-purple-600 dark:bg-gray-100 px-2 py-2"
                                 required></textarea>
                         </label>
                         <button type="submit"
-                            class="self-center px-8 py-3 text-lg rounded focus:ring hover:ring focus:ring-opacity-75 dark:bg-violet-600 dark:text-gray-50 focus:dark:ring-violet-600 hover:dark:ring-violet-600">Submit</button>
+                            class="self-center px-8 py-3 text-lg rounded focus:ring-opacity-75 dark:bg-purple-800 dark:text-gray-50">Submit</button>
                     </form>
                 </div>
             </section>
