--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </nav>
             <div class="flex justify-center items-center gap-4">
                 <div id="searchContainer" class="flex items-start justify-center gap-2">
-                    <button id="searchButton"><i class="ri-search-2-line text-2xl"></i></button>
+                    <button class="searchButton"><i class="ri-search-2-line text-2xl"></i></button>
                 </div>
                 <div class="language-opts flex items-center gap-3">
                     <div class="language">
@@ -186,7 +186,7 @@
                                         brokerage
                                         solutions</button>
                                     <button data-translate="buttonText2" href="#searchvehicles"
-                                        class="py-2 px-4 border-2 rounded-lg max-sm:text-sm max-sm:px-3">Find vehical of
+                                        class="searchButton py-2 px-4 border-2 rounded-lg max-sm:text-sm max-sm:px-3">Find vehical of
                                         your
                                         dreams</button>
                                 </div>
