--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
                 <div class="mx-auto max-w-7xl sm:px-6 lg:px-8 font-[font3]">
                     <div
                         class="relative isolate overflow-hidden bg-transparent px-6 py-20 text-center sm:px-16 sm:shadow-sm">
-                        <h1 class="mx-auto max-w-2xl text-3xl font-bold tracking-tight text-whitesmoke-900 sm:text-4xl">
+                        <h1 data-translate="find_what_drives_you" class="mx-auto max-w-2xl text-3xl font-bold tracking-tight text-whitesmoke-900 sm:text-4xl">
                             Find what drives you..?
                         </h1>
 
@@ -471,7 +471,7 @@
                                     class="px-6 py-2 w-full rounded-md flex-1 outline-none bg-white text-purple-700"
                                     required />
                                 <button type="submit"
-                                    class="w-full md:w-auto px-6 py-3 bg-black border-black text-white fill-white active:scale-95 duration-100 border will-change-transform overflow-hidden relative rounded-xl transition-all">
+                                    class="w-full md:w-auto px-6 py-3 bg-purple-800 border-black text-white fill-white active:scale-95 duration-100 border will-change-transform overflow-hidden relative rounded-xl transition-all">
                                     <span class="text-sm font-semibold">Search</span>
                                 </button>
                             </label>
